--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "editor.autoIndent": "advanced",
   "editor.guides.indentation": true,
   "editor.tabSize": 4,
-  "mypy.configFile": "./environment/mypy.ini",
+  "mypy.configFile": "./env/mypy.ini",
   "python.analysis.typeCheckingMode": "strict",
   "python.analysis.autoImportCompletions": true,
   "python.analysis.inlayHints.variableTypes": true,
@@ -33,6 +33,6 @@
   },
   "python.analysis.ignore": ["**/tests/**"],
   "[python]": {
-    "editor.defaultFormatter": "ms-python.autopep8"
+    "editor.defaultFormatter": "ms-python.black-formatter"
   }
 }
