Added secret files and added RDS tests.
- Secret files are encrypted with AES256.
- Added RDS test at `./zperk.t2/src/*`
- To decrypt the secret data, you must be me

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,9 @@
   "python.analysis.ignore": ["**/tests/**"],
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "[json]": {
+    "editor.suggest.insertMode": "replace",
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
