Added S3 main function
- Added images for testing.
- Updated readme(s).
- Removed mypi
- Updates secrets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
   "editor.autoIndent": "advanced",
   "editor.guides.indentation": true,
   "editor.tabSize": 4,
-  "mypy.configFile": "./env/mypy.ini",
   "python.analysis.typeCheckingMode": "strict",
   "python.analysis.autoImportCompletions": true,
   "python.analysis.inlayHints.variableTypes": true,
@@ -17,8 +16,8 @@
     "reportSelfClsParameterName": "warning",
     "reportUndefinedVariable": "warning",
     "reportUnusedImport": "warning",
-    "reportUnknownArgumentType": "warning",
-    "reportUnknownLambdaType": "warning",
+    "reportUnknownArgumentType": "none",
+    "reportUnknownLambdaType": "none",
     "reportUnusedFunction": "warning",
     "reportUnusedVariable": "warning",
     "reportUnusedExpression": "warning",
