Updates secrets and added Lambda testing
- im not fixing the invalid response lmao
- Updated secrets
- Added readme and the translation too

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,6 @@
     "editor.suggest.insertMode": "replace",
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "python.REPL.enableREPLSmartSend": false
+  "python.REPL.enableREPLSmartSend": false,
+  "cSpell.words": ["Unkown"]
 }
